--- a/index.html
+++ b/index.html
@@ -34642,6 +34642,7 @@ function webGLStart() {
   }
 }
   function drawScene(){
+    initGL();
     yRot = yRot+1;
     rotMat.rotate(xRot/5, 1,0,0);  rotMat.rotate(yRot/5, 0,1,0);
     rotMat.rotate(zRot, 0,0,1);
@@ -34649,7 +34650,7 @@ function webGLStart() {
     mvMatrix.load( rotMat );
     mvMatrix.translate(0, -.1, transl);
 
-    //gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
+    gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
     gl.uniformMatrix4fv( mvMatLoc, false, new Float32Array(mvMatrix.getAsArray()) );
     gl.drawElements(gl.TRIANGLES, fl, gl.UNSIGNED_SHORT, 0);
     gl.flush ();
